ml_ops/45/k8s/deployment.yml
# Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-cut-api-pod
  labels:
    app: graph-cut-api-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graph-cut-api-pod
  template:
     metadata:
       labels:
         app: graph-cut-api-pod
     spec:
       containers:
       - name: graph-cut-api-container
         image: gcr.io/my-project2-303004/graph-cut-api-image-gke:latest
         ports:
         - containerPort: 5000
           name: http-server
         command: ["/bin/sh","-c"]
         args: ["gunicorn app:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:5000 --workers 4 --threads 1 --backlog 256 --reload"]
         resources:
           requests:
             cpu: 1
             memory: "10Gi"
