ml_ops/45/k8s/service_node_port.yml
# Service
apiVersion: v1
kind: Service
metadata:
  name: graph-cut-api-server
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: graph-cut-api-pod
