ml_ops/45/k8s/graph_cut_api.yml
# Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-cut-api-pod
  labels:
    app: graph-cut-api-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graph-cut-api-pod
  template:
     metadata:
       labels:
         app: graph-cut-api-pod
     spec:
       containers:
       - name: graph-cut-api-container
         image: gcr.io/my-project2-303004/graph-cut-api-image-gke:latest
         ports:
         - containerPort: 5000
           name: http-server
         command: ["/bin/sh","-c"]
         args: ["gunicorn app:app -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:5000 --workers 4 --threads 1 --backlog 256 --reload"]
         resources:
           requests:
             cpu: 1
             memory: "10Gi"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: graph-cut-api-server
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: graph-cut-api-pod
---
# Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graph-cut-api-ingress   # Ingress名を指定
  annotations:
    kubernetes.io/ingress.global-static-ip-name: graph-cut-api-ip       # 用意した静的IPの名前を指定(IPアドレス自体では無い)
    networking.gke.io/managed-certificates: graph-cut-api-cert          # ManagedCertificate で指定した ManagedCertificateリソース名 を指定
spec:
  backend:
    serviceName: graph-cut-api-server   # Serviceリソースで指定したリソース名を指定
    servicePort: 5000                   # Serviceリソースの portで指定したポート(targetPortでは無い)
