ml_ops/45/k8s/ingress.yml
# Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graph-cut-api-ingress   # Ingress名を指定
  annotations:
    kubernetes.io/ingress.global-static-ip-name: graph-cut-api-ip       # 用意した静的IPの名前を指定(IPアドレス自体では無い)
    networking.gke.io/managed-certificates: graph-cut-api-cert          # ManagedCertificate で指定した ManagedCertificateリソース名 を指定
    #kubernetes.io/ingress.allow-http: "false"                           # httpsのみ許可
spec:
  backend:
    serviceName: graph-cut-api-server   # Serviceリソースで指定したリソース名を指定
    servicePort: 5000                   # Serviceリソースの portで指定したポート(targetPortでは無い)
